# piet-wgpu

./: Cargo.toml  LICENSE  README.md
src/: blur_quad.rs  context.rs  font.rs  lib.rs  pipeline.rs  quad.rs  svg.rs  tex.rs  text.rs  text_layout.rs  text_pipeline.rs  transformation.rs  triangle.rs
src/shader/: blur_quad.frag  blur_quad.vert  geometry copy.wgsl  geometry.vert.glsl  geometry.wgsl  mask.frag  mask.vert  quad.vert  quad.wgsl  tex.frag  tex.vert  text.frag  text.vert  text.wgsl  triangle.frag  triangle.vert
