[package]
name = "piet-wgpu"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
hashbrown = "0.11.2"
unicode-width = "0.1.8"
include_dir = "0.6.0"
sha2 = "0.9.8"
tiny-skia = "0.6.3"
resvg = "0.22.0"
usvg = "0.22.0"
linked-hash-map = "0.5.4"
pathfinder_geometry = "0.5.1"
lyon = "0.17.5"
piet = "0.4.0"
swash = { git = "https://github.com/lapce/swash" }
# swash = { path = "../workspaces/swash" }
parley = { git = "https://github.com/lapce/parley" }
# parley = { path = "../workspaces/parley" }
glow = "0.11.2"
glutin = { git = "https://github.com/lapce/glutin", branch = "new-keyboard-all" }
glam = "0.10"
bytemuck = { version = "1.7.2", features = ["derive"] }
