[package]
name = "piet-wgpu"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
log = "0.4.14"
hashbrown = "0.12.3"
unicode-width = "0.1.9"
include_dir = "0.7.2"
sha2 = "0.10.2"
tiny-skia = "0.8.0"
resvg = { git = "https://github.com/ghishadow/resvg", branch = "master", version = "0.23.0"}
linked-hash-map = "0.5.4"
pathfinder_geometry = "0.5.1"
lyon = "0.17.10"
piet = "0.5.0"
swash = { git = "https://github.com/lapce/swash" }
# swash = { path = "../workspaces/swash" }
parley = { git = "https://github.com/lapce/parley" }
# parley = { path = "../workspaces/parley" }
glow = "0.11.2"
glam = "0.21.3"
bytemuck = { version = "1.7.2", features = ["derive"] }
